src/objects/HOG_EOJ__c.object
<CustomObject>
    <fields>
        <fullName>Service_General__c</fullName>
        <label>Service - General</label>
        <picklist>
            <picklistValues>
                <fullName>Bridge Plug - BB23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Casing - BC09</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Downhole Suspension - BD13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drain - BD15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expansion Tools - BE13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fish - BF10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Turn Tool - BN01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Packer - BP02</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patch - BP06</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Protector - BP19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pump - BP22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reservoir - BR16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rod - BR22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Screen - BS03</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SCVF/GM - BS06</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shear - BS15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stimulation - BS42</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Surface - BS49</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tag Bar - BT01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Torque Rings - BT09</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tubing - BT27</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wellhead - BW03</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Service_Rig_Coordinator_Email__c</fullName>
        <label>Service Rig Coordinator Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Service_Rig_Planner_Email__c</fullName>
        <label>Service Rig Planner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Service_Rig_Program__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Service Rig Program</label>
        <referenceTo>HOG_Service_Rig_Program__c</referenceTo>
        <relationshipLabel>End of Job Reports</relationshipLabel>
        <relationshipName>EOJs</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Started__c</fullName>
        <label>Service Started</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Shear_Placement1__c</fullName>
        <label>Shear Placement</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shear_Placement2__c</fullName>
        <label>Shear Placement</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shear_Type1__c</fullName>
        <label>Shear Type</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plainsman WireTorq</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plainsman ToughTorq</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plainsman Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Shear_Type2__c</fullName>
        <label>Shear Type</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plainsman WireTorq</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plainsman ToughTorq</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plainsman Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Stator_Condition1__c</fullName>
        <label>Stator Condition</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Used</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Stator_Condition2__c</fullName>
        <label>Stator Condition</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Used</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Test_Efficiency1__c</fullName>
        <label>Test Efficiency</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Efficiency2__c</fullName>
        <label>Test Efficiency</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tubing_Failure__c</fullName>
        <label>Tubing Failure</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tubing_JIH1__c</fullName>
        <label>Tubing JIH</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tubing_JIH2__c</fullName>
        <label>Tubing JIH</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tubing_Size1__c</fullName>
        <label>Tubing Size</label>
        <picklist>
            <picklistValues>
                <fullName>2 3/8&quot; EUE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 7/8 &quot; EUE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.5&quot; EUE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.5&quot; EUE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tubing_Size2__c</fullName>
        <label>Tubing Size</label>
        <picklist>
            <picklistValues>
                <fullName>2 3/8&quot; EUE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 7/8 &quot; EUE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.5&quot; EUE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.5&quot; EUE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Well_Location_Name__c</fullName>
        <formula>Service_Rig_Program__r.Well_Location__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Well Location Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Well_Orientation__c</fullName>
        <formula>Service_Rig_Program__r.Well_Orientation__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Well Orientation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Order__c</fullName>
        <formula>Service_Rig_Program__r.Work_Order__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Work Order #</label>
        <type>Text</type>
    </fields>
    <label>End of Job Report</label>
    <nameField>
        <displayFormat>EOJ-{0000000000}</displayFormat>
        <label>EOJ Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>End of Job Reports</pluralLabel>
    <recordTypes>
        <fullName>End_Of_Job_New</fullName>
        <active>true</active>
        <label>End of Job - New</label>
    </recordTypes>
    <recordTypes>
        <fullName>End_Of_Job_Submitted</fullName>
        <active>true</active>
        <label>End of Job - Submitted</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>